--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /yii_test
 /yii_test.bat
 
+# Ignoramos este archivo para evitar problemas con la BBDD
+/common/config/main-local.php
+
 # phpstorm project files
 .idea
 
